@@ -9750,7 +9750,7 @@ local object rd_ch_terminal3 (const gcv_object_t* stream_) {
       begin_blocking_system_call();
       rl_already_prompted = true;
       var char* line = strip_white(readline(prompt==NULL ? "" : prompt));
-      begin_blocking_system_call();
+      end_blocking_system_call();
       run_time_restart(); /* resume run time clock */
       if (!(prompt==NULL)) {
         begin_system_call(); free(prompt); end_system_call();
